adding the cards about course

--- a/index.html
+++ b/index.html
@@ -86,7 +86,27 @@
 
 </section>
 <section>
+    <h3>Course List</h3>
     <div class="row">
+  <div class="col-md-3">
+    <div class="card" style="width: 18rem;">
+        <img src="images.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center">REACT js</h5>
+          <p class="card-text">We providing the one of the most powerfull libary from industry Experts</p>
+          <a href="https://react.dev/" class="btn btn-primary">Try the React Tutorial</a>
+        </div>
+      </div>
+
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="images.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title text-center">REACT js</h5>
+      <p class="card-text">We providing the one of the most powerfull libary from industry Experts</p>
+      <a href="https://react.dev/" class="btn btn-primary">Try the React Tutorial</a>
+    </div>
+  </div>
 
     </div>
 </section>
