--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   <div>
+    <script src="validate.js"></script>
 <header>
     <div class="row bg-info">
         <div class="col-md-6" >
@@ -38,14 +39,13 @@
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          details
+                          BRANCHES
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Calicut university</a></li>
-                          <li><a class="dropdown-item" href="#">Kannur university</a></li>
-                          <li><a class="dropdown-item" href="#"> CUSAT</a></li>
-                          <li><a class="dropdown-item" href="#">Kerala university</a></li>
-                          <li><a class="dropdown-item" href="#">Mg university</a></li>
+                          <li><a class="dropdown-item" href="#">CALICUT</a></li>
+                          <li><a class="dropdown-item" href="#">KOCHI</a></li>
+                          <li><a class="dropdown-item" href="#"> THIRUVANATHAPURAM</a></li>
+                          
                          
                         </ul>
                       </li>
@@ -144,11 +144,11 @@
       <form id="gform" method="post"  action="https://script.google.com/macros/s/AKfycby9P7uuf8iGCDy49Bi7_7p_igNMMR4DuxaF29c_47zENoIwIKXDUHzVEpV7Vam2rwGh/exec">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <input name="emailaddress" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Contact NO</label>
+          <label  name="number"for="exampleInputPassword1" class="form-label">Contact NO</label>
           <input type="number" class="form-control" id="exampleInputPassword1">
         </div>
         <div class="form-floating">
@@ -163,6 +163,6 @@
 
 
   </section>
-  
+  <script src="https://code.jquery.com/jquery-migrate-3.4.1.js" integrity="sha256-CfQXwuZDtzbBnpa5nhZmga8QAumxkrhOToWweU52T38=" crossorigin="anonymous"></script>
 </body>
 </html>
